<resources>
	<string name="app_name">Kings in the Corner</string>
	<string name="copyright">© 2010-2011 Asparagus Programs</string>
	<string name="app_version">1.5.0</string>
	<string name="button_playGame">Play game</string>
	<string name="button_cancel">Cancel</string>
	<string name="button_continue">Continue</string>
	<string name="button_selectUser">Select User</string>
	<string name="button_createUser">Create User</string>
	<string name="button_singlePlayer">Single Player</string>
	<string name="button_multiplayer">Multi-player</string>
	<string name="button_stats">Statistics</string>
	<string name="button_prefs">Settings</string>
	<string name="button_2players">2 Players</string>
	<string name="button_3players">3 Players</string>
	<string name="button_4players">4 Players</string>
	<string name="button_saveYes">Save game</string>
	<string name="button_saveNo">Don\'t save</string>
	<string name="button_quitYes">Quit game</string>
	<string name="button_quitNo">Don\'t quit</string>
	<string name="button_OK">OK</string>
	<string name="button_clearSaves">Clear saves</string>
	<string name="button_showOfflineHelp">Offline help</string>
	<string name="menu_playAgain">Play Again</string>
	<string name="menu_undo">Undo</string>
	<string name="menu_undoDisabled">Can\'t Undo</string>
	<string name="menu_sortHand">Sort Hand</string>
	<string name="menu_sortHandStop">Stop Sort</string>
	<string name="menu_prefs">Settings</string>
	<string name="menu_help">Help</string>
	<string name="menu_about">About</string>
	<string name="menu_cheats">Cheats</string>
	<string name="menu_win">I Win</string>
	<string name="menu_trash">Trash Opponent</string>
	<string name="diag_playerTurn">Player %1$d\'s turn.</string>
	<string name="diag_playerWin">Player %1$d wins.</string>
	<string name="diag_deckEmpty">Deck is empty!</string>
	<string name="diag_quitSingle">Save the game before quitting? Not saving will delete any previously saved game.</string>
	<string name="diag_quitMulti">Are you sure you want to quit?</string>
	<string name="diag_noUserGame">No user name selected. Game statistics will not be recorded.</string>
	<string name="diag_noUserStats">You must provide a user name to keep track of stats.</string>
	<string name="diag_firstTime">To end your turn, tap the deck in the center of the table. For more help, press menu and select Help.</string>
	<string name="diag_youWin">You Win!!</string>
	<string name="diag_youLose">You Lose.</string>
	<string name="diag_clearSaves">This will erase all saved games for all users. Are you sure you want to do this?</string>
	<string name="diag_noInternet">No internet access available. Would you like to view the slightly outdated offline help?</string>
	<string name="diag_oldSaves">Old saves are incompatible with this version of the game and have been removed.</string>
	<string name="diag_aboutCards">Don\'t like the new cards?\n\nChange them in the settings!</string>
	<string name="dialog_title_selectUser">Select User</string>
	<string name="dialog_title_cardImages">Choose Style</string>
	<string name="dialog_title_difficulty">Choose Difficulty</string>
	<string name="pref_key_settings">Settings</string>
	<string name="pref_title_settings">Settings</string>
	<string name="pref_key_userSettings">UserSettings</string>
	<string name="pref_title_userSettings">User Settings</string>
	<string name="pref_summary_userSettings">Select/create/delete users, clear saves</string>
		<string name="pref_key_username">Username</string>
		<string name="pref_title_username">Current User</string>
		<string name="pref_summary_username">No user name selected. Wins/losses will not be tracked</string>
		<string name="pref_key_newUser">NewUser</string>
		<string name="pref_title_createUser">Create New User</string>
		<string name="pref_summary_createUser">Create a new user name to track wins/losses</string>
		<string name="pref_key_userAdvanced">AdvancedUserSettings</string>
		<string name="pref_title_userAdvanced">Advanced User Settings</string>
		<string name="pref_summary_userAdvanced">Remove user, clear saves, etc.</string>
			<string name="pref_key_clearSaves">ClearSaves</string>
			<string name="pref_title_clearSaves">Clear Saved Games</string>
			<string name="pref_summary_clearSaves">Clear all saved games for all users</string>
			<string name="pref_summary_removeUser">Remove a user name from the list and delete their stats</string>
			<string name="pref_title_removeUser">Remove User</string>
			<string name="removeUser_title">*Click name to delete*</string>
			<string name="pref_key_noUserWarning">NoUserWarning</string>
			<string name="pref_title_noUserWarning">No User Warning</string>
			<string name="pref_summary_noUserWarning">Shows a warning before starting a game when no user is selected</string>
	<string name="pref_key_gameplaySettings">GameplaySettings</string>
	<string name="pref_title_gameplaySettings">Gameplay Settings</string>
	<string name="pref_summary_gameplaySettings">Difficulty, play speed, autosave, etc.</string>
		<string name="pref_key_computerDelay">ComputerDelay</string>
		<string name="pref_title_computerDelay">Computer Delay</string>
		<string name="pref_summary_computerDelay">Set the delay in the computer\'s playing. Higher numbers make the computer play slower</string>
		<string name="pref_key_difficulty">Difficulty</string>
		<string name="pref_title_difficulty">Difficulty</string>
		<string name="pref_summary_difficulty">Set the difficulty of the computer controlled opponents</string>
		<string name="pref_key_autosave">Autosave</string>
		<string name="pref_title_autosave">Autosave</string>
		<string name="pref_summary_autosave">Automatically saves single player games periodically and before quitting</string>
		<string name="pref_key_sortHand">SortHand</string>
		<string name="pref_title_sortHand">Sort Hand by Default</string>
		<string name="pref_summary_sortHand">Automatically turns on Sort Hand at the start of each single player game</string>
		<string name="pref_key_emptyDeckWarning">EmptyDeckWarning</string>
		<string name="pref_title_emptyDeckWarning">Empty Deck Warning</string>
		<string name="pref_summary_emptyDeckWarning">Shows a warning when the deck runs out of cards</string>
		<string name="pref_key_cheatsAllString">cheats.enabled</string>
		<string name="pref_key_cheatScreen">CheatScreen</string>
		<string name="pref_title_cheatScreen">Cheat Codes</string>
		<string name="pref_summary_cheatScreen">Enter codes, enable/diasble cheats</string>
			<string name="pref_key_enterCode">EnterCode</string>
			<string name="pref_title_enterCode">Enter Code</string>
			<string name="pref_summary_enterCode">Enter a code to unlock cheats</string>
			<string name="pref_key_cheatsCategory">CheatsCategory</string>
			<string name="pref_title_cheatsCategory">Unlocked Cheats</string>
				<string name="pref_key_cheatsComputerHandString">cheats.hand</string>
				<string name="pref_key_cheatsComputerHandUnlocked">CheatsComputerHandUnlocked</string>
				<string name="pref_key_cheatsComputerHand">ShowComputerHand</string>
				<string name="pref_title_cheatsComputerHand">Show Computer Hand</string>
				<string name="pref_summary_cheatsComputerHand">Shows the face of cards in the computer\'s hand</string>
				<string name="pref_key_cheatsWinString">cheats.win</string>
				<string name="pref_key_cheatsWinUnlocked">CheatsWinUnlocked</string>
				<string name="pref_key_cheatsWin">CheatsWin</string>
				<string name="pref_title_cheatsWin">I Win</string>
				<string name="pref_summary_cheatsWin">Enables the I Win button in the cheats submenu</string>
				<string name="pref_key_cheatsTrashString">cheats.trash</string>
				<string name="pref_key_cheatsTrashUnlocked">CheatsTrashUnlocked</string>
				<string name="pref_key_cheatsTrash">CheatsTrash</string>
				<string name="pref_title_cheatsTrash">Trash Opponent</string>
				<string name="pref_summary_cheatsTrash">Enables the Trash Opponent button in the cheats submenu</string>
				<string name="pref_key_disableCheats">DisableCheats</string>
				<string name="pref_title_disableCheats">Disable Cheats</string>
				<string name="pref_summary_disableCheats">Click to remove all cheats</string>
	<string name="pref_key_displaySettings">DisplaySettings</string>
	<string name="pref_title_displaySettings">Display Settings</string>
	<string name="pref_summary_displaySettings">Card style, draw pile count, highlight cards</string>
		<string name="pref_key_cardImage">CardImage</string>
		<string name="pref_title_cardImage">Card Style</string>
		<string name="pref_summary_cardImage">If you are currently in a game, you will need to return to the main menu for changes to take effect</string>
		<string name="cardImage_default">classic</string>
		<string name="pref_key_cardBack">CardBack</string>
		<string name="pref_title_cardBack">Card Back Style</string>
		<string name="pref_summary_cardBack">Set the image on the back of the cards</string>
		<string name="cardBack_default">classic</string>
		<string name="pref_key_aboutCards">AboutCards</string>
		<string name="pref_key_drawPileCount">DrawPileCount</string>
		<string name="pref_title_drawPileCount">Draw Pile Count</string>
		<string name="pref_summary_drawPileCount">Shows the number of cards remaining in the draw pile</string>
		<string name="pref_key_highlightCards">HighlightCards</string>
		<string name="pref_title_hightlightCards">Highlight Cards</string>
		<string name="pref_summary_highlightCards">Highlights a card when a playable card is dragged over it</string>
	<string name="pref_key_applicationInformation">ApplicationInformation</string>
	<string name="pref_title_applicationInformation">Application Information</string>
		<string name="pref_key_update">CheckForUpdates</string>
		<string name="pref_title_update">Check for Updates</string>
		<string name="link_market">market://details?id=com.asparagusprograms.kingsinthecorner</string>
		<string name="pref_title_website">View Change Log</string>
		<string name="pref_summary_website">Full change log for updates</string>
		<string name="link_website">http://code.google.com/p/ap-kings-in-the-corner/wiki/Changelog</string>
			<string name="pref_key_email">EmailDeveloper</string>
			<string name="pref_title_email">Report a Bug</string>
			<string name="pref_summary_email">Just add a description of your problem with as much detail as possible</string>
			<string name="subject_email">BUG: Kings in the Corner</string>
			<string name="body_email">\n\n\nLeave this------------------------\nApp Version: %1$s\nPhone: %2$s\nAndroid Version: %3$s\n--------------------------------------\n</string>
			<string name="link_email">mailto:asparagus.programs@gmail.com</string>
	<string name="pref_key_lastRunVersion">LastRunVersion</string>
	<string name="pref_key_firstGame">FirstGame</string>
	<string name="pref_key_inGame">InGame</string>
	<string name="toast_usernameShort">User name must be greater than 3 characters</string>
	<string name="toast_usernameLong">User name must be less than 25 characters</string>
	<string name="toast_usernameStart">User name must begin with a letter</string>
	<string name="toast_yourTurn">Your Turn</string>
	<string name="username_none">None</string>
	<string name="toast_usernameCreated">User name %1$s created</string>
	<string name="toast_usernameDeleted">User name %1$s removed</string>
	<string name="toast_usernameExists">User name already exists</string>
	<string name="toast_usernameInvalid">Invalid user name</string>
	<string name="toast_savesCleared">Saved games cleared</string>
	<string name="toast_gameRestored">Game Restored</string>
	<string name="toast_usernamePeriod">User name cannot contain a period</string>
	<string name="toast_cheatsAllEnabled">You little cheater...</string>
	<string name="toast_cheatsWinEnabled">I Win unlocked</string>
	<string name="toast_cheatsTrashEnabled">Trash Opponent unlocked</string>
</resources>